Bugfix: Fixed scrollbar track for light and dark mode

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -128,6 +128,10 @@
 }
 
 ::-webkit-scrollbar-track {
+  background-color: rgba(253, 253, 252);
+}
+
+.dark ::-webkit-scrollbar-track {
   background-color: rgba(30, 33, 37);
 }
 
